--- a/ant-design-vue-boot/package.json
+++ b/ant-design-vue-boot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-antd-jeecg",
+  "name": "vue-antd",
   "version": "2.1.4",
   "private": true,
   "scripts": {
@@ -9,12 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@antv/data-set": "^0.10.2",
     "@jeecg/antd-online-214": "^2.1.41",
+    "@antv/data-set": "^0.10.2",
     "@tinymce/tinymce-vue": "^2.0.0",
-    "ant-design-vue": "^1.4.0",
+    "ant-design-vue": "^1.4.12",
     "apexcharts": "^3.6.5",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "clipboard": "^2.0.4",
     "codemirror": "^5.46.0",
     "dayjs": "^1.8.0",
